cmake_minimum_required(VERSION 3.17)
project(untitled1)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled1 main.cpp Item.cpp Item.h Weapon.cpp Weapon.h Utils.cpp Utils.h Armour.cpp Armour.h Potion.cpp Potion.h Entity.cpp Entity.h Hero.cpp Hero.h Warrior.cpp Warrior.h Paladin.cpp Paladin.h Sorcerer.cpp Sorcerer.h Monster.cpp Monster.h Dragon.cpp Dragon.h Exoskeleton.cpp Exoskeleton.h Spirit.cpp Spirit.h Party.cpp Party.h HealthPotion.cpp HealthPotion.h StrengthPotion.cpp StrengthPotion.h Effects.cpp Effects.h DexterityPotion.cpp DexterityPotion.h AgilityPotion.cpp AgilityPotion.h Spell.cpp Spell.h IceSpell.cpp IceSpell.h FireSpell.cpp FireSpell.h LightningSpell.cpp LightningSpell.h)